# graft

./: .gitignore  README.md  graft.cabal  stack.yaml
src/: Graft.hs
src/Graft/: Types.hs
test/: Spec.hs
tpl/: conditional.tpl  outer.tpl  sub1.tpl  sub2.tpl  subsub.tpl
