name:                graft
version:             0.2.0
synopsis:            Super minimal general templating
description:         Super minimal general templating
homepage:            https://github.com/collegevine/graft#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralph@collegevine.com
copyright:           Collegevine
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graft.Types, Graft
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , text >= 1.2.2.1
                     , containers >= 0.5.6.2
                     , lens >= 4.13
                     , directory >= 1.2.2.0
                     , parsec >= 3.1.11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/collegevine/graft
