name:                graft
version:             0.4.0
synopsis:            Super minimal general templating
description:         Super minimal general templating
homepage:            https://github.com/collegevine/graft#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralph@collegevine.com
copyright:           Collegevine
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graft.Types, Graft
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , containers
                     , lens
                     , directory
                     , parsec
  default-language:    Haskell2010

test-suite graft-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graft
                     , mtl
                     , text
                     , containers
                     , lens
                     , directory
                     , parsec
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/collegevine/graft
